@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-12T01:40:02Z",
+  "timestamp" : "2022-07-12T08:20:53Z",
   "count_outdated" : 383,
   "uniques_outdated" : 221,
   "count" : 415,
-  "uniques" : 239,
+  "uniques" : 240,
   "clones" : [
     {
       "timestamp": "2022-06-28T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-07-11T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
